# LettucePrevent

./: .gitignore  LICENSE  README.md  custom_generator.py  custom_logits_processor.py  custom_logits_processor_experiments.py  custom_logits_processor_script.py  experiments_with_modified_transformers_lib.py  experiments_with_number_detector_logits_processor.py  experiments_with_sequence_bias.py  experiments_with_tinylettuce.py  experiments_without_sequence_bias.py  extract_hallucinated_numbers.py  logits_processor_detector.py  main.py  pyproject.toml  regex_logits_processor.py  requirements.txt  run_main_rq1.sh  run_main_rq2.sh  run_main_rq2_beam4.sh  run_main_test.sh  stopping_criteria_detector.py  streaming_detection.py
analysis/: README.md  extract_factual_hallucinations.py  extract_hallucinated_numbers.py  extract_hallucinations_LettuceDetect.py  extract_number_hallucinations.py  hallucination_benchmark.py  statistical_number_comparison_analysis.py
data/: hallucination_stats.txt  hallucination_stats_none_detector_logits_processor_LettuceDetect_20250926_131031.txt  hallucination_stats_number_detector_logits_processor.txt  hallucination_stats_with_sequence_bias.txt  hallucination_stats_without_sequence_bias.txt  hallucinations_experiments_LettuceDetect_20250926_125101.json  hallucinations_experiments_LettuceDetect_20250926_131031.json  hallucinations_experiments_LettuceDetect_20251227_135240.json  hallucinations_experiments_none_llama_run_20251006_081805.json  hallucinations_experiments_none_run_20251208_141915_qwen2.5_14B_Instruct.json  hallucinations_experiments_number_run_20251015_080517_use_all_tokens_true_for_runtime_comparison.json  hallucinations_experiments_number_run_20251205_085408_qwen2.5_14B_Instruct.json  ragtruth_data_debug.json  (+20 more)
(+403 files in other folders)
